# CAMP_code

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  README.md  python_requirements.txt
src/learning_sensitivity/: CMakeLists.txt  package.xml
src/learning_sensitivity/config/: GRU_params_tl1.yaml  sensitivityNN_tl1.pt
src/learning_sensitivity/include/learning_sensitivity/: SensitivityNN.h
src/learning_sensitivity/scripts/: GRU.py  LSTM.py  MLP.py  RNN.py  TransformerEncoder.py  analysis_dataset.py  analysis_models.py
src/learning_sensitivity/scripts/pre_process/: pre_process_data.py
src/learning_sensitivity/scripts/train/: train.py
src/learning_sensitivity/src/: SensitivityNN.cpp
src/plannification/kinosplines/: CMakeLists.txt  package.xml
src/plannification/kinosplines/include/kinosplines/: KinoDynamicTime.h  kdtp_dof.h  kdtp_init.h  kdtp_localpath.h  kdtp_robot.h  kdtp_spline.h  kdtp_state.h  kdtp_utils.h
src/plannification/kinosplines/src/: KinoDynamicTime.cpp  kdtp_dof.cpp  kdtp_init.cpp  kdtp_localpath.cpp  kdtp_robot.cpp  kdtp_spline.cpp  kdtp_state.cpp  kdtp_utils.cpp
src/plannification/planning/: CMakeLists.txt  package.xml
src/plannification/planning/config/: planners_params.yaml  planning_params.yaml  postprocess_params.yaml
src/plannification/planning/include/planning/bullet/: BulletClient.h  PhysicsServers.h
src/plannification/planning/include/planning/context/: PlanningContext.h
src/plannification/planning/include/planning/motion_validator/: DiscreteRobustMotionValidator.h
src/plannification/planning/include/planning/opt_objectives/: KS_time_obj.h  Sensi_obj.h
src/plannification/planning/include/planning/planners/: FMT.h  Generator.h  RRT.h  RRTstar.h  R_SAFMT_NN.h  R_SARRT.h  R_SARRT_NN.h  R_SARRTstar.h  R_SARRTstar_NN.h  R_SASST.h  R_SASSTstar.h  RandUPRRT.h  SARRT.h  SARRTstar.h  SST.h  SSTstar.h  TRRT.h
src/plannification/planning/include/planning/post_processing/: ExtendedShortcut.h  NloptLocalopt.h  PostProcessor.h  STOMP.h  Shortcut.h  Smooth.h
src/plannification/planning/include/planning/post_processing/stomp/: accuracy_optimization_task.h  multivariate_gaussian.hpp  stomp.h  (+2 more)
src/plannification/planning/include/planning/samplers/: DubinsStateSampler.h  KinosplineStateSampler.h
src/plannification/planning/include/planning/state_checker/: RobustStateValidityChecker.h
src/plannification/planning/include/planning/state_spaces/: RobustStateSpace.h
src/plannification/planning/include/planning/visual_tools/: BulletVisualTools.h
src/plannification/planning/launch/: plan_quadrotor.launch  plan_unicycle.launch
src/plannification/planning/src/: Plan.cpp
src/plannification/planning/src/bullet/: BulletClient.cpp  PhysicsServers.cpp  RosFiles.cpp
src/plannification/planning/src/context/: PlanningContext.cpp
src/plannification/planning/src/motion_validator/: DiscreteRobustMotionValidator.cpp
src/plannification/planning/src/opt_objectives/: KS_time_obj.cpp  Sensi_obj.cpp
src/plannification/planning/src/planners/: FMT.cpp  Generator.cpp  RRT.cpp  RRTstar.cpp  R_SAFMT_NN.cpp  R_SARRT.cpp  R_SARRT_NN.cpp  R_SARRTstar.cpp  R_SARRTstar_NN.cpp  R_SASST.cpp  R_SASSTstar.cpp  RandUPRRT.cpp  SARRT.cpp  SARRTstar.cpp  SST.cpp  SSTstar.cpp  TRRT.cpp
src/plannification/planning/src/post_processing/: ExtendedShortcut.cpp  NloptLocalopt.cpp  STOMP.cpp  Shortcut.cpp  Smooth.cpp
src/plannification/planning/src/post_processing/stomp/: stomp.cpp  utils.cpp
src/plannification/planning/src/samplers/: DubinsStateSampler.cpp  KinosplineStateSampler.cpp
src/plannification/planning/src/state_checker/: RobustStateValidityChecker.cpp
src/plannification/planning/src/state_spaces/dubins/: DubinsUnicycleSpace.cpp
src/plannification/planning/src/state_spaces/kinospline/: KinoQuadrotorSpace.cpp  KinoUnicycleSpace.cpp  KinosplineStateSpace.cpp
src/plannification/planning/src/visual_tools/: BulletVisualTools.cpp
src/plannification/utils/: CMakeLists.txt  package.xml
src/plannification/utils/include/utils/: maths_definitions.h  project_ellipsoid.h  transform.h
src/plannification/utils/src/: project_ellipsoid.cpp  transform.cpp
src/robots/: CMakeLists.txt  package.xml
src/robots/config/: quadrotor_params.yaml  unicycle_params.yaml
src/robots/include/robots/: Quadrotor.h  Robot.h  Unicycle.h
src/robots/launch/: kdtp_server.launch  quadrotor_dynamic_server.launch  quadrotor_localopt_server.launch  quadrotor_sensitivity_server.launch  unicycle_dynamic_server.launch  unicycle_localopt_server.launch  unicycle_sensitivity_server.launch
src/robots/meshes/env/: LAAS_indoor_2rings_gaz.mtl  LAAS_indoor_empty.mtl  LAAS_indoor_rings_gaz.mtl  LAAS_indoor_test.mtl  LAAS_indoor_window.mtl  LAAS_indoor_window_pilar.mtl  corridor.mtl  corridor_pilar.mtl  ddr_env0.mtl  ddr_env1.mtl  ddr_env3.mtl  ring_2cm.mtl
src/robots/meshes/quadrotor/: drone.mtl  drone_genom.mtl  drone_perche.mtl  drone_perche_genom.mtl
src/robots/meshes/unicycle/: ddr.mtl
src/robots/scripts/lib/: base_model.py  sym_gen.py  trajectory.py  trajgen.py
src/robots/scripts/models/: quadrotor_model_CoM.py  quadrotor_model_CoM_dynamic.py  quadrotor_model_classic.py  quadrotor_model_classic_dynamic.py  unicycle_dynamic_model_DFL.py  unicycle_kinematic_model_DFL.py  unicycle_kinematic_model_DFL_dynamic.py
src/robots/scripts/servers/: quadrotor_dynamic_server.py  quadrotor_localopt_server.py  quadrotor_sensitivity_server.py  unicycle_dynamic_server.py  unicycle_localopt_server.py  unicycle_sensitivity_server.py
src/robots/src/: Quadrotor.cpp  Unicycle.cpp
src/robots/urdf/: quadrotor.urdf  scene_quad.urdf  scene_unic.urdf  unicycle.urdf
src/services_msgs/: CMakeLists.txt  package.xml
src/services_msgs/msg/: DesiredState.msg  InitRobotState.msg
src/services_msgs/srv/: DynamicSrv.srv  LocaloptSrv.srv  SensitivitySrv.srv
src/simulation_genom/gazebo_ros_link_attacher/: CMakeLists.txt  package.xml
src/simulation_genom/gazebo_ros_link_attacher/include/: gazebo_ros_link_attacher.h
src/simulation_genom/gazebo_ros_link_attacher/src/: gazebo_ros_link_attacher.cpp
(+2425 files in other folders)
