<?xml version="1.0"?>
<package>
  <name>utils</name>
  <version>1.0.0</version>
  <description>Useful functions</description>

  <author email="htelloch@laas.fr">Hermes Tello</author>
  <maintainer email="htelloch@laas.fr">Hermes Tello</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>

</package>
